name:                blockchain-with-linear-types
version:             0.1.0.0
synopsis:            blockchain implemented with linear types
homepage:            https://github.com/haroldcarr/blockchain-with-linear-types
license:             BSD3
license-file:        LICENSE
author:              Harold Carr
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
